@@ -1,5 +1,17 @@
 2012-03-19  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG can no longer compile V8-v4/regexp in debug mode
+        https://bugs.webkit.org/show_bug.cgi?id=81592
+
+        Reviewed by Gavin Barraclough.
+
+        * dfg/DFGSpeculativeJIT32_64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+        * dfg/DFGSpeculativeJIT64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+
+2012-03-19  Filip Pizlo  <fpizlo@apple.com>
+
         Prediction propagation for UInt32ToNumber incorrectly assumes that outs outcome does not
         change throughout the fixpoint
         https://bugs.webkit.org/show_bug.cgi?id=81583
